--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 	<title>Demo</title>
 </head>
 <body>
-	<?php
-		echo 'Hello~';
-
-	?>
-	<p>I love you.</p>
+	<p>想不通有什么理由不支持习近平，杀贪官整顿吏治全国扶贫。我支持习近平连任，中国不能离开习近平，习近平是千古以来最好的皇帝。</p>
 </body>
 </html>
