--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Demo</title>
+	<title>习近平万岁</title>
 </head>
 <body>
-	<p>想不通有什么理由不支持习近平，杀贪官整顿吏治全国扶贫。我支持习近平连任，中国不能离开习近平，习近平是千古以来最好的皇帝。</p>
+	<p>想不通有什么理由不支持习近平，杀贪官整顿吏治全国扶贫。支持终身制，习近平主席万岁！</p>
 </body>
 </html>
